# forzamusic-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  (+3 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  forzamusic_sdk.py  forzamusic_types.py  pyproject.toml
py/core/: control.py  result.py
py/entity/: album_entity.py  lyric_entity.py  search_entity.py  song_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  log_feature.py  metrics_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_album_direct.py  test_album_entity.py  test_exists.py  test_feature.py  test_lyric_direct.py  test_lyric_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py  test_song_direct.py  test_song_entity.py
py/utility/: clean.py  feature_add.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_headers.py  prepare_params.py  prepare_query.py  result_basic.py  result_headers.py  transform_request.py  transform_response.py
(+480 files in other folders)
